--- a/tests/unit_tests/random_generator/testcase.yaml
+++ b/tests/unit_tests/random_generator/testcase.yaml
@@ -3,4 +3,7 @@ common:
   integration_platforms:
     - mps2/an385
 tests:
-  tests.random_generator: {}
+  RandomGeneratorTest.MockRandomNumberGeneration:
+    harness: gtest
+  RandomGeneratorTest.DivideByRandomNumberFunction:
+    harness: gtest
